--- a/code-snippet-client/src/App.css
+++ b/code-snippet-client/src/App.css
@@ -1,3 +1,25 @@
+:root {
+  --color-primary: #7d5a5a;
+  --color-text: #3d3131;
+  --color-text-light: #6e5c5c;
+  --color-bg: #f9f4f1;
+  --color-card: #ffffff;
+  --color-accent: #d9bfb7;
+  --color-danger: #a15252;
+
+  --font-main: 'Segoe UI', 'Helvetica Neue', sans-serif;
+}
+
+body{
+  background-color:  #f9f4f1;
+    margin: 0;
+    padding: 0;
+    background-color: var(--color-bg);
+    font-family: var(--font-main);
+    color: var(--color-text);
+  
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -5,38 +27,3 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
